# veniceai-rs

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
src/: chat.rs  lib.rs  models.rs
src/api/: chat.rs  config.rs  mod.rs  models.rs  traits.rs
src/client/: config.rs  mod.rs  models.rs
