[package]
name = "veniceai-rs"
version = "0.1.0"
authors = ["Synthonyx Technologies Ltd <admin@synthonyx.com>"]
edition = "2021"
homepage = "https://synthonyx.github.io/veniceai/"
repository = "https://github.com/synthonyx/veniceai"
license = "GPL-3.0-only"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
